# universal_timestamp

./: .gitignore  LICENSE  Makefile  README.md  go.txt  test_runner  universal_timestamp.pc.in
.github/: CONTRIBUTING.md  README.md  SECURITY.md  STYLE_GUIDE.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  question.yml
include/: universal_timestamp.h
latex/: md_README.tex
src/: universal_timestamp.c  ut_calendar.c  ut_format.c  ut_now.c  ut_parse.c
src/core/: ut_core.c  ut_internal.h
test/: test.c
wiki-to-copy/: Go.md  Home.md  PowerShell.md  _Footer.md  _Sidebar.md  specification.md  wrapper_bash.md  wrapper_cpp.md  wrapper_python.md  wrapper_rust.md  wrappers.md
wrappers/bash/: test_bash.sh  universal_timestamp.sh  uts-cli.c
wrappers/cpp/: test_cpp.cpp  universal_timestamp.hpp
wrappers/go/: go.mod  universal_timestamp.go  universal_timestamp_test.go
wrappers/powershell/: README.md  compile.bat  test_pwsh.ps1  universal_timestamp.ps1
wrappers/python/: README.md  __init__.py  pyproject.toml  universal_timestamp.py
wrappers/rust/: Cargo.toml  build.rs
wrappers/rust/src/: lib.rs
wrappers/rust/tests/: test_rust.rs
