[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal_timestamp"
version = "0.9.0"
description = "Python bindings for the Universal Timestamp C library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["timestamp", "utc", "iso8601", "datetime"]

[project.urls]
Homepage = "https://github.com/mozrin/universal_timestamp"
Repository = "https://github.com/mozrin/universal_timestamp"

[tool.setuptools.packages.find]
where = ["."]
include = ["universal_timestamp*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
